feat(theming): updated architecture page

--- a/src/app.css
+++ b/src/app.css
@@ -15,4 +15,5 @@
   --color-palette-faded-emerald: #23D8A133;
   --color-palette-light: #FEFEFD; /* Text and Content */
   --color-palette-faded-slate: #5C637040; /* Floating Backgrounds */
+  --color-palette-faded-purple: #1a162575; /* Background for Panels */
 }
